# rebalance

./: .gitignore  package-lock.json  package.json
backend/: .gitignore  README.md  main.py  package.json  pyproject.toml  requirements.txt  scan.py
backend/app/: database.py  models.py  scanner.py
backend/app/routes/: shoes.py
backend/src/: index.js
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.css  App.tsx  account.css  index.css
frontend/src/components/: AccountSidebar.tsx  ShoeAnimation.tsx  SiteHeader.tsx  icons.tsx
frontend/src/pages/: AccountOrdersPage.tsx  RebalancePage.tsx  ReturnsPage.tsx  rebalance.css  returns.css
